# basketball

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  assert.hpp  bspline.hpp  bspline.py  camera.cpp  camera.hpp  gl_error.cpp  gl_error.hpp  main.cpp  opengl_context.cpp  opengl_context.hpp  run_clang_tidy.sh  vis.cpp  visualize.py
bb3d/: assert.cpp  assert.hpp  camera.cpp  camera.hpp  gl_error.cpp  gl_error.hpp  opengl_context.cpp  opengl_context.hpp
bb3d/shader/: colorlines.cpp  colorlines.hpp  compile.cpp  cubemesh.cpp  cubemesh.hpp  freetype.cpp  freetype.hpp  gridmesh.cpp  gridmesh.hpp  lines.cpp  lines.hpp  shader.cpp  shader.hpp
problem/: backboard.hpp  geometry.py  hoop.hpp  problem.hpp  shot.hpp  visualization.cpp  visualization.hpp
shader/: backboard.cpp  backboard.hpp  cat_texture.cpp  cat_texture.hpp  colorlines.cpp  colorlines.hpp  compile.cpp  compile.hpp  cubemesh.cpp  cubemesh.hpp  freetype.cpp  freetype.hpp  gridmesh.cpp  gridmesh.hpp  lines.cpp  lines.hpp  shader.cpp  shader.hpp
