load("@rules_python//python:defs.bzl", "py_binary")

copts = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wconversion",
    "-fdiagnostics-color=always",
    "-std=c++17",
]

cc_binary(
    name = "vis",
    srcs = [
        "main.cpp",
        "bspline.hpp",
        "problem/backboard.hpp",
        "problem/hoop.hpp",
        "problem/problem.hpp",
        "problem/shot.hpp",
        "problem/visualization.cpp",
        "problem/visualization.hpp",
    ],
    deps = ['@bb3d//:bb3d'],
    linkopts = [
        '-lpthread',
        '-lnlopt',
    ],
    copts = copts + ["-I/usr/include/freetype2"],
    data = [
        "image/awesomeface.png",
        "image/court.png",
        "image/warriors_court.png",
        ":sample.png",
        ":sample2.png",
    ],
)

py_binary(
    name = "geometry",
    srcs = [
        "problem/geometry.py",
    ],
    main = "problem/geometry.py",
    srcs_version = "PY3",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)
